--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [dependencies]
 clap = "4.5.53"
 cursive = "0.21.1"
+cursive-hjkl = "0.2.0"
 strip-ansi-escapes = "0.2.1"
 toml = "0.9.10"
