--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "nuch"
-version = "0.8.2-alpha"
+version = "1.0.0"
 edition = "2024"
+authors = ["Hassan Qasemi"]
+description = "A CLI to manage Markdown content and images for Nuxt Content sites."
+license = "MIT"
+repository = "https://github.com/rivethorn/nuch"
+homepage = "https://github.com/rivethorn/nuch"
+readme = "README.md"
+
 
 [dependencies]
 inquire = "0.9.1"
@@ -11,4 +18,9 @@ serde = { version = "1.0", features = ["derive"] }
 toml = "0.9.8"
 
 [dev-dependencies]
-tempfile = "3"
+tempfile = "3.23.0"
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
