--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,6 +14,8 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    environment: production
+
     steps:
     - uses: actions/checkout@v4
     - name: Build
