--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,7 @@ anyhow = "1.0.100"
 clap = { version = "4.5.53", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.9.8"
-swc_ecma_parser = "30.0.0"
-swc_common = "18.0.1"
-swc_ecma_ast = "19.0.0"
-swc_ecma_visit = "19.0.0"
-globset = "0.4.18"
+serde_json = "1.0.147"
 
 [dev-dependencies]
 tempfile = "3.24.0"
