--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nuch"
-version = "1.3.4-beta"
+version = "1.3.5"
 edition = "2024"
 authors = ["Hassan Qasemi"]
 description = "A CLI to manage Markdown content and images for Nuxt Content sites."
